// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgedResource href renders properly 1`] = `
<span
  class="badged-resource-pf"
>
  <span>
    <span
      class="sr-only"
    >
      Role Binding
    </span>
    <span
      class="badged-resource-pf-icon rolebinding"
    >
      RB
    </span>
  </span>
  <a
    class="badged-resource-pf-resource-name"
    href="http://patternfly.org"
  >
    Clickable Item
  </a>
</span>
`;

exports[`BadgedResource onClick behaves properly 1`] = `
<span
  class="badged-resource-pf test-click-class"
  id="test-on-click"
>
  <span>
    <span
      class="sr-only"
    >
      Role Binding
    </span>
    <span
      class="badged-resource-pf-icon rolebinding"
    >
      RB
    </span>
  </span>
  <a
    class="badged-resource-pf-resource-name"
    href="#"
  >
    Clickable Item
  </a>
</span>
`;

exports[`BadgedResource renders properly 1`] = `
<div>
  <span
    class="badged-resource-pf test-badged-resource-class"
    id="test-badged-resource-id"
  >
    <span>
      <span
        class="sr-only"
      >
        Deployment Config
      </span>
      <span
        class="badged-resource-pf-icon"
        style="background-color: rgb(0, 67, 104);"
      >
        DC
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    />
  </span>
  <span
    class="badged-resource-pf"
  >
    <span>
      <span
        class="sr-only"
      >
        Deployment Config
      </span>
      <span
        class="badged-resource-pf-icon deploymentconfig"
      >
        DC
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    />
  </span>
  <span
    class="badged-resource-pf"
  >
    <span>
      <span
        class="sr-only"
      >
        Role Binding
      </span>
      <span
        class="badged-resource-pf-icon rolebinding"
      >
        RB
      </span>
    </span>
    <a
      class="badged-resource-pf-resource-name"
      href="#"
    >
      Clickable Item
    </a>
  </span>
  <span
    class="badged-resource-pf"
  >
    <span>
      <span
        class="sr-only"
      >
        Namespace
      </span>
      <span
        class="badged-resource-pf-icon namespace"
        title="Namespace"
      >
        NS
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    >
      No Tooltip Item
    </span>
  </span>
  <span
    class="badged-resource-pf"
  >
    <span>
      <span
        class="sr-only"
      >
        API Service
      </span>
      <span
        class="badged-resource-pf-icon"
        style="background-color: rgb(0, 92, 102);"
      >
        APIS
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    >
      Fast Tooltip
    </span>
  </span>
  <span
    class="badged-resource-pf"
  >
    <span>
      <span
        class="sr-only"
      >
        Deployment Config
      </span>
      <span
        class="badged-resource-pf-icon deploymentconfig"
      >
        DC
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    >
      Long Tooltip
    </span>
  </span>
  <span
    class="badged-resource-pf badged-resource-pf-lg"
  >
    <span>
      <span
        class="sr-only"
      >
        Project
      </span>
      <span
        class="badged-resource-pf-icon project"
        style="background-color: rgb(45, 118, 35);"
      >
        PR
      </span>
    </span>
    <span
      class="badged-resource-pf-resource-name"
    />
  </span>
  <span
    class="badged-resource-pf badged-resource-pf-lg"
  >
    <span>
      <span
        class="sr-only"
      >
        Service Monitor
      </span>
      <span
        class="badged-resource-pf-icon servicemonitor"
      >
        SM
      </span>
    </span>
    <a
      class="badged-resource-pf-resource-name"
      href="#"
    >
      Large Clickable Item
    </a>
  </span>
</div>
`;
